fix(illustration-doc): missing wrapping class for whole page

--- a/packages/web/src/app/doc-pages/brand/illustrations-doc/illustrations-exhibit/illustrations-exhibit-details/illustrations-exhibit-details.component.scss
+++ b/packages/web/src/app/doc-pages/brand/illustrations-doc/illustrations-exhibit/illustrations-exhibit-details/illustrations-exhibit-details.component.scss
@@ -59,7 +59,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 16px;
+    gap: 32px;
 
     @include breakpoints.breakpoint-up(Tablet) {
       flex-direction: column;
